# secretsanta

./: .dockerignore  .gitignore  .uvrc  DATABASE_PERSISTENCE.md  DOCKER.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  Dockerfile.uv  GOOGLE_API_SETUP.md  OAUTH_SETUP.md  README.md  SPECIFICATION.md  TESTING.md  build-docker.sh  diagnose-docker.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  push-docker.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
app/: __init__.py  __version__.py  bot.py  database.py  main.py  models.py  utils.py  utils_templates.py
app/core/: __init__.py  config.py
app/routers/: __init__.py  events.py  profile.py  wishlists.py
app/services/: __init__.py  matching.py
static/: .gitkeep
templates/: base.html  dashboard.html  login.html
templates/events/: create.html  detail.html  join.html  select_wishlist.html
templates/profile/: connect_telegram.html
templates/wishlists/: create.html  edit.html  list.html  share.html
tests/: __init__.py  auth_helpers.py  conftest.py  run_browser_tests.py  run_browser_tests.sh  test_auth.py  test_browser.py  test_browser_e2e.py  test_events.py  test_integration.py  test_utils.py  test_wishlists.py
